# opencv-cuda-kinect

./: CMakeLists.txt  README.md  install_opencv_python_CUDA_Kinect.sh  kinect_wrapper.cpp  kinect_wrapper.hpp  ni_test.cpp  ni_test.hpp
