cmake_minimum_required(VERSION 2.8)
project(ni_test)
add_executable(ni_test ni_test.cpp kinect_wrapper.cpp)
find_package(OpenCV REQUIRED)
find_package(libfreenect REQUIRED)
target_link_libraries(ni_test ${OpenCV_LIBS} ${FREENECT_LIBRARIES} ${SSE_FLAGS} ${OPEN_NI_LIBRARIES})
include_directories(AFTER /usr/include/libusb-1.0 ${FREENECT_INCLUDE_DIRS} ${LIBUSB_INCLUDE_DIRS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
link_directories (${LIBUSB_LIBRARY_DIRS})
